@@ -1,4 +1,4 @@
-@set UPDATED 28 February 2006
-@set UPDATED-MONTH February 2006
+@set UPDATED 5 May 2006
+@set UPDATED-MONTH May 2006
 @set EDITION 4.8
 @set VERSION 4.8
